# Perception-based-robotic-arm-grasping

./: README.md
BottleModel/: model.config  model.sdf
BottleModel/meshes/: BottleModel.dae  BottleModel.stl
Images/: Grasping Trajectory.m4v  Grasping demo.m4v
realsense_ws/devel/: .catkin  .rosinstall  setup.sh
realsense_ws/devel/lib/pkgconfig/: realsense2_description.pc  realsense_gazebo_plugin.pc
realsense_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
realsense_ws/devel/share/realsense_gazebo_plugin/cmake/: realsense_gazebo_pluginConfig.cmake
realsense_ws/src/realsense2_description/urdf/: _d435.gazebo.xacro
rgbd_ws/src/rgbd_process/: CMakeLists.txt  package.xml
rgbd_ws/src/rgbd_process/src/: PicknPlace.cpp  rgbd_prcoess.py
